Pipeline modification